acm/gitops/base/policies/require-namespace-isolation/manifests/allow-from-openshift-ingress-networkpolicy.yaml
# Los routers de OpenShift sirven las Route auxiliares (webhooks de Pipelines
# as Code) que apuntan a estos namespaces.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
